retrieved/unpackaged/objects/Armor__c.object
<CustomObject>
    <fields>
        <fullName>Armor_Image__c</fullName>
        <formula>IMAGE( Picture__c ,  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Armor Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Magical_protection__c</fullName>
        <label>Magical protection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_protection__c</fullName>
        <label>Physical protection</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Helmet</fullName>
                </value>
                <value>
                    <fullName>Chest Armor</fullName>
                </value>
                <value>
                    <fullName>Gloves</fullName>
                </value>
                <value>
                    <fullName>Belt</fullName>
                </value>
                <value>
                    <fullName>Trousers</fullName>
                </value>
                <value>
                    <fullName>Boots</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>11</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Armor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Armor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Armor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>